# hrple

./: .bazelrc  .dockerignore  .env.local  .gitignore  .gitpod.yml  .golangci.yaml  BUILD.bazel  Dockerfile  Makefile  README.md  TODO.md  WORKSPACE  build.json  go.mod  go.work
.trunk/: trunk.yaml
cmd/hrple-cli/: main.go
components/hrple-cli/cmd/hrple-cli/: main.go
components/hrple-cli/docker/: Dockerfile
components/hrple-cli/internal/commands/: add.go  test.go
components/hrple-cli/scripts/: build.sh  docker-build.sh
deployment/: Dockerfile.habit  Dockerfile.hrple-cli  hrple-cli.docker
go/: .golangci.yaml  go.mod  go.sum
go/components/habit/cmd/habit/: main.go
go/components/habit/db/: 001_create_habit_table.sql  tern.conf
go/components/habit/internal/common/: context.go
go/components/habit/internal/data/: habit.go
go/components/hrple-cli/: Makefile
go/components/hrple-cli/cmd/hrple-cli/: BUILD.bazel  main.go
go/components/hrple-cli/docker/: Dockerfile
go/components/hrple-cli/internal/auth/: BUILD.bazel  auth.go
go/components/hrple-cli/internal/commands/: BUILD.bazel  add.go  executor.go  test.go
go/components/hrple-cli/scripts/: build.sh  docker-build.sh  docker-release.sh
go/pkg/cli/: BUILD.bazel  args.go  command.go  command_test.go  flags.go  flags_test.go  help.go
go/pkg/errors/: BUILD.bazel  reason.go
go/pkg/errors/exitError/: BUILD.bazel  exitcodes.go
go/pkg/testHelper/: BUILD.bazel
internal/commands/: add.go  executor.go  test.go
pkg/cli/: command.go  command_test.go  flags_test.go
pkg/errors/: error.go
pkg/errors/exitError/: error.go  exitcodes.go
pkg/testHelper/: util.go
scripts/: bootstrap.sh  build.sh  clean.sh  common.sh  db.sh  docker-build.sh  docker-clean-all.sh  docker-clean.sh  docker-release.sh  sca.sh  test.sh
